# protocol-core-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bitchat_protocol/: __init__.py  codec.py  errors.py  peer.py  tlv.py  types.py
tests/: test_codec.py  test_fixtures.py  test_fuzz.py  test_tlv.py
