[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitchat-protocol"
version = "0.1.1"
description = "BitChat binary protocol encode/decode — packet structs, TLV codec, peer ID utilities"
authors = [
    { name = "bitchat-sdk contributors" },
]
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.10"
keywords = ["bitchat", "protocol", "mesh", "ble", "p2p", "nostr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.9"]

[project.urls]
"Source Code" = "https://github.com/bitchat-sdk/protocol-core-py"
"Bug Tracker" = "https://github.com/bitchat-sdk/protocol-core-py/issues"
"Changelog" = "https://github.com/bitchat-sdk/protocol-core-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["bitchat_protocol"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
